fix: btns z-index 0

--- a/english-for-kids/css/style.scss
+++ b/english-for-kids/css/style.scss
@@ -629,6 +629,7 @@ body {
 
       .stats-field {
         position: relative;
+        z-index: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
